--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#stijn" class="w3-bar-item w3-button w3-padding-large w3-hide-small">STIJN</a>
+    <a href="#stijn" class="w3-bar-item w3-button w3-padding-large">STIJN</a>
     <a href="#levensloop" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Levensloop</a>
     <a href="#interesses" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Interesses</a>
     <a href="#levenslessen" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Levenslessen</a>
