--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://xfonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://xcdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body {font-family: "Lato", sans-serif}
 .mySlides {display: none}
@@ -18,7 +18,7 @@ body {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#stijn" class="w3-bar-item w3-button w3-padding-large">STIJN</a>
+    <a href="#stijn" class="w3-bar-item w3-button w3-padding-large">Stijn</a>
     <a href="#levensloop" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Levensloop</a>
     <a href="#interesses" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Interesses</a>
     <a href="#levenslessen" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Levenslessen</a>
@@ -27,7 +27,6 @@ body {font-family: "Lato", sans-serif}
 
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#stijn" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Stijn</a>
   <a href="#levensloop" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Levensloop</a>
   <a href="#interesses" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Interesses</a>
   <a href="#levenslessen" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">Levenslessen</a>
