--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ body {font-family: Arial, sans-serif}
 <style>
 .stmenu {
   width: 17px;
-  height: 3px;
-  background-color: red;
+  height: 2px;
+  background-color: white;
   margin: 3px 0;
 }
 </style>
