--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ body {font-family: Arial, sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="stijn">
     <h2 class="w3-wide">Stijn</h2>
     <p class="w3-opacity"><i>Human on planet Earth</i></p>
-    <p class="w3-center">Welkom bij de virtuele en tijdloze versie van mezelf.</p>
-    <p class="w3-center">"There is no end. There is no beginning. There is only the passion of life"</p>
+    <p class="w3-center">Welkom bij de virtuele en tijdloze versie van mezelf. Wat belangrijk is voor mij kan je hier terugvinden</p>
+    <p class="w3-center"><i>"There is no end. There is no beginning. There is only the passion of life"</i></p>
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p>Name</p>
